added color palette, functions incomplete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div id='container'>
+    <div id='canvas-background'>
+      <div id='container'>
+      </div>
+      <p></p>
+      <div id='palette'>
+      </div>
     </div>
     <script src="pixel.js"></script>
   </body>
